--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,14 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+node_modules
 
 
 dist-ssr
 *.local
 
 # Editor directories and files
+node_modules/
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -23,4 +24,4 @@ dist-ssr
 *.sln
 *.sw?
 
-node_modules
+
